graphic design is my passion

--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,30 +1,26 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:width="1024dp"
+    android:height="1024dp"
+    android:viewportWidth="1024"
+    android:viewportHeight="1024">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M162.5,129.3c-4.4,3.7 -5.5,11.1 -5.5,36.4l0,22.2 -45.2,0.3 -45.3,0.3 -4.5,2.7c-2.8,1.6 -5.5,4.3 -7,7l-2.5,4.3 -0.6,104.5c-0.4,57.5 -0.7,186.4 -0.7,286.5 -0.2,175 -0.1,182.2 1.7,186 2.2,4.9 5.3,7.8 10.6,10.2 3.8,1.6 17.7,1.7 232.4,2.1l228.5,0.4 2.2,2.7c1.2,1.4 5.6,6.7 9.8,11.7 23.3,28.2 58,53.6 93.9,68.9 31,13.2 59.6,19.3 94.7,20.2 38.5,1 69.3,-4.5 103.4,-18.2 34.5,-13.8 60,-30.8 86.6,-57.4 74.3,-74.6 92.7,-187.4 45.9,-281.2 -21.1,-42.4 -54.1,-78.4 -94.4,-102.9 -9.1,-5.5 -30,-16 -39.4,-19.6l-7.3,-2.8 0.3,-104 0.4,-104.1 -2.5,-4.5c-1.4,-2.4 -4.5,-5.8 -6.8,-7.5l-4.4,-3 -38.6,-0.5 -38.7,-0.5 -0.5,-28c-0.5,-29.1 -0.8,-31.3 -5,-33.5 -3.2,-1.7 -7.7,-1.1 -10.6,1.3 -2.3,2 -2.8,3.4 -3.5,10.8 -0.4,4.6 -0.8,17.8 -0.8,29.3l-0.1,20.9 -71.2,-0.6c-39.2,-0.4 -94.1,-0.7 -121.9,-0.7l-50.7,-0 -0.3,-25.4c-0.4,-23.9 -0.5,-25.6 -2.5,-28.3 -4.4,-5.9 -10.8,-6.3 -14.8,-0.9 -1.9,2.5 -2.2,4.8 -3,28.7l-0.9,25.9 -113.1,-0c-62.2,-0 -121.5,-0.3 -131.8,-0.7l-18.8,-0.6 0,-22.1c0,-25.2 -1.1,-32.6 -5.5,-36.3 -1.6,-1.4 -3.9,-2.3 -6,-2.3 -2.1,-0 -4.4,0.9 -6,2.3zM717.8,226.6l66.2,0.6 0,40.5 0,40.6 -178.7,-0.7c-403.5,-1.4 -516.4,-1.9 -516.7,-2.5 -0.3,-0.4 -0.2,-18.5 0.1,-40.4l0.6,-39.8 281.1,0.6c154.6,0.3 310.9,0.8 347.4,1.1zM782.8,332.5c0.9,0.3 1.2,8.4 1.2,35.6l0,35.2 -4.7,-0.7c-23.2,-3.3 -28.7,-3.8 -46.3,-3.9 -34.9,-0.1 -64.5,5.4 -96.4,17.9 -34.4,13.6 -63.5,33 -89.6,60 -37.9,39.1 -60.1,85.3 -68.1,141.4 -1.8,13 -1.6,47.2 0.5,61.5 3.3,23.1 9.5,45.1 18.8,66.3 2.2,5.1 3.9,9.4 3.7,9.6 -0.2,0.2 -93.5,-0 -207.4,-0.3l-207,-0.6 0.4,-211c0.2,-116.1 0.4,-211.2 0.6,-211.5 0.4,-0.6 692.5,-0.1 694.3,0.5zM752,436.1c43.1,3.9 86,21.3 119.5,48.4 54.7,44.3 84.4,114.4 77.4,182.6 -5.1,50.3 -28.2,97.4 -64.5,131.9 -41.1,39 -94.8,60.3 -151.9,60.3 -33.9,-0 -63.2,-6.3 -93.5,-20.2 -93.8,-42.8 -143.4,-144.8 -118.4,-243.3 12.6,-49.9 44.8,-94.7 89.3,-124.3 19.4,-12.9 42.4,-23.1 65.6,-29 25.9,-6.7 51,-8.8 76.5,-6.4z"
+        android:fillColor="#5353F8"
+        android:strokeColor="#5353F8"/>
+    <path
+        android:pathData="M364,436c-13.8,1.4 -25.7,7.2 -33.3,16.1 -7.7,9 -13.6,25 -13.7,37.1l0,4.8 10.9,-0 10.8,-0 0.7,-6c2.5,-22.2 15.1,-32.9 37.6,-31.8 10.6,0.5 18,3.7 23.8,10.3 4.9,5.6 6.6,11.4 6,20.3 -1.3,17.3 -12.6,25.6 -35,25.7l-10.8,-0 0,9.7 0,9.8 9.4,-0c16.4,-0 28.5,3.8 35.2,11.2 4.1,4.6 5.2,7.2 6.6,15.5 1.7,11.2 -2,23.2 -9.4,29.8 -14.5,13.1 -42.2,14 -55.8,1.8 -5.8,-5.2 -8.9,-11.9 -10.4,-22.8l-1.2,-8 -11.8,-0.3 -11.9,-0.3 0.7,7.7c2,21.4 12.9,39 29,46.5 10.1,4.7 19,6.2 35.1,5.6 21.4,-0.7 33.4,-5.2 45,-17.1 15.5,-15.9 20,-42.9 10.3,-62.3 -3.2,-6.3 -10.5,-13.2 -17.7,-16.6l-6.4,-3 3.8,-1.9c5.6,-2.9 12.3,-10.2 15.3,-16.6 3.7,-8.1 4.4,-24 1.3,-33.9 -4.7,-15.7 -16.7,-25.6 -35.6,-29.7 -8.8,-1.8 -20.1,-2.5 -28.5,-1.6z"
+        android:fillColor="#AAA"
+        android:strokeColor="#AAA"/>
+    <path
+        android:pathData="M235.2,442.8c-2.7,8.5 -7.2,15.6 -11.4,18.2 -4.9,3 -15.1,5.9 -25.5,7.2l-9.3,1.2 0,8.2c0,6.5 0.3,8.3 1.6,8.8 0.9,0.3 10.4,0.6 21.1,0.6l19.6,-0 -0.4,63.2 -0.4,63.3 11.6,0.3 11.6,0.3 0.6,-57.2c0.4,-31.5 0.7,-71.6 0.7,-89.1l0,-31.8 -8.8,-0 -8.8,-0 -2.2,6.8z"
+        android:fillColor="#AAA"
+        android:strokeColor="#AAA"/>
+    <path
+        android:pathData="M661.5,551.7c-5.4,18.6 -12.5,23.7 -38.2,27.4l-8.3,1.1 0,6.8c0,3.8 -0.3,7.5 -0.6,8.4 -0.5,1.4 1.6,1.6 19.4,1.6 11,-0 20.7,0.2 21.5,0.6 1.2,0.4 1.4,9.2 0.9,63.5l-0.5,62.9 12,-0 12,-0 0.6,-88.1c0.4,-48.5 0.4,-88.5 0.1,-89 -0.3,-0.5 -4.3,-0.9 -8.9,-0.9l-8.4,-0 -1.6,5.7z"
+        android:fillColor="#AAA"
+        android:strokeColor="#AAA"/>
+    <path
+        android:pathData="M792.4,546.9c-26.9,4.3 -42.5,23.4 -50.1,61.6 -2.3,11.5 -2.5,49.9 -0.4,61.5 4.5,25 15.3,43.7 30.3,52.7 11.4,6.9 28.7,9 43.2,5.3 10,-2.5 16.4,-6.1 22.6,-12.4 8.2,-8.5 12,-14.5 16.3,-26.1 6.6,-17.5 9.2,-37.2 8.4,-62.5 -0.6,-18.9 -2.5,-30.2 -7.1,-42.4 -7.1,-18.7 -20.4,-31.7 -37,-36 -7.1,-1.9 -19.8,-2.7 -26.2,-1.7zM816.3,569.3c13.8,5.8 21.2,25.1 22.4,59.2 0.6,18 -0.7,35.9 -3.8,48.5 -5.1,21.3 -17.3,32.5 -35.2,32.3 -22,-0.3 -33.6,-19.9 -35.4,-59.3 -1.4,-33.7 4.2,-60.9 15.1,-73.7 8.1,-9.4 24,-12.4 36.9,-7z"
+        android:fillColor="#AAA"
+        android:strokeColor="#AAA"/>
 </vector>
