--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,21 @@
 <resources>
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+
+    <!-- Theme -->
+    <style name="AppTheme" parent="Theme.AppCompat.DayNight.DarkActionBar">
+        <item name="colorPrimaryDark">@color/navyBlue</item>
+        <item name="colorPrimary">@color/blue</item>
+    </style>
+
+    <!-- Dark theme. -->
+    <style name="AppTheme.Dark" parent="AppTheme">
+        <item name="bkg">@color/navyBlue</item>
+        <item name="text">@color/grey</item>
+
+    </style>
+    <!-- Light theme. -->
+    <style name="AppTheme.Light" parent="AppTheme">
+        <item name="bkg">@color/pastelBlue</item>
+        <item name="text">@color/navyBlue</item>
     </style>
 
 </resources>
