--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="navyBlue">#180051</color>
+    <color name="blue">#5353F8</color>
+    <color name="pastelBlue">#8BD8FB</color>
+    <color name="grey">#AAA</color>
 </resources>
