--- a/app/src/main/res/layout/decimal_time.xml
+++ b/app/src/main/res/layout/decimal_time.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?android:attr/colorBackground"
+    android:background="?android:attr/windowBackground"
     android:padding="@dimen/widget_margin">
 
     <TextView
