--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,21 +1,11 @@
 <resources>
 
-    <!-- Theme -->
+    <!-- Theme Day -->
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.DarkActionBar">
         <item name="colorPrimaryDark">@color/navyBlue</item>
         <item name="colorPrimary">@color/blue</item>
-    </style>
-
-    <!-- Dark theme. -->
-    <style name="AppTheme.Dark" parent="AppTheme">
-        <item name="bkg">@color/navyBlue</item>
-        <item name="text">@color/grey</item>
-
-    </style>
-    <!-- Light theme. -->
-    <style name="AppTheme.Light" parent="AppTheme">
-        <item name="bkg">@color/pastelBlue</item>
-        <item name="text">@color/navyBlue</item>
+        <item name="android:windowBackground">@color/pastelBlue</item>
+        <item name="android:textColor">@color/navyBlue</item>
     </style>
 
 </resources>
