--- a/app/src/main/res/layout/decimal_time.xml
+++ b/app/src/main/res/layout/decimal_time.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?android:attr/windowBackground"
+    android:background="@color/widgetBkg"
     android:padding="@dimen/widget_margin">
 
     <TextView
@@ -11,8 +11,8 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_margin="8dp"
-        android:background="?android:attr/colorBackground"
-        android:textColor="@color/blue"
+        android:background="@color/widgetBkg"
+        android:textColor="@color/widgetTxt"
         android:textSize="24sp"
         android:textStyle="bold|italic" />
 
