--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -2,8 +2,8 @@
 <resources>
     <!-- Theme Night -->
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.DarkActionBar">
-        <item name="colorPrimaryDark">@color/pastelBlue</item>
-        <item name="colorPrimary">@color/blue</item>
+        <item name="colorPrimaryDark">@color/blue</item>
+        <item name="colorPrimary">@color/otherBlue</item>
         <item name="android:windowBackground">@color/navyBlue</item>
         <item name="android:textColor">@color/grey</item>
     </style>
