--- a/app/src/main/res/layout/decimal_time.xml
+++ b/app/src/main/res/layout/decimal_time.xml
@@ -1,8 +1,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/widgetBkg"
-    android:padding="@dimen/widget_margin">
+    android:background="@drawable/widget_background"
+    android:padding="@dimen/widget_margin"
+
+    >
 
     <TextView
         android:id="@+id/appwidget_text"
@@ -11,7 +13,6 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_margin="8dp"
-        android:background="@color/widgetBkg"
         android:textColor="@color/widgetTxt"
         android:textSize="24sp"
         android:textStyle="bold|italic" />
