--- a/app/src/main/res/layout/international_fixed_calendar_date.xml
+++ b/app/src/main/res/layout/international_fixed_calendar_date.xml
@@ -2,12 +2,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/widget_background"
-    android:padding="@dimen/widget_margin"
-
-    >
+    android:padding="@dimen/widget_margin">
 
     <TextView
-        android:id="@+id/appwidget_text_dt"
+        android:id="@+id/appwidget_text_ifc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
