--- a/app/src/main/res/xml/international_fixed_calendar_date_info.xml
+++ b/app/src/main/res/xml/international_fixed_calendar_date_info.xml
@@ -5,7 +5,7 @@
     android:initialLayout="@layout/international_fixed_calendar_date"
     android:minWidth="165dp"
     android:minHeight="40dp"
-    android:previewImage="@drawable/example_appwidget_preview"
+    android:previewImage="@drawable/ifc"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="86400000"
     android:widgetCategory="home_screen"></appwidget-provider>
